# seedpass

./: .gitignore  Cargo.toml  README.md  deny.toml
crates/seedpass-cli/: Cargo.toml
crates/seedpass-cli/src/: main.rs
crates/seedpass-cli/tests/: cli_flow.rs
crates/seedpass-codec/: Cargo.toml
crates/seedpass-codec/src/: lib.rs
crates/seedpass-core/: Cargo.toml
crates/seedpass-core/src/: lib.rs
crates/seedpass-crypto/: Cargo.toml
crates/seedpass-crypto/src/: lib.rs
crates/seedpass-derive/: Cargo.toml
crates/seedpass-derive/src/: lib.rs
crates/seedpass-derive/tests/: vector_suite.rs
crates/seedpass-storage/: Cargo.toml
crates/seedpass-storage/src/: lib.rs
docs/: SECURITY-REVIEW.md
docs/spec/: CANONICALIZATION.md  CLI-BEHAVIOR.md  DERIVATION.md  PASSWORD-GENERATION.md  RECIPES.md  SEED-FILE.md  TEST-VECTORS.md  THREAT-MODEL.md
fuzz/: README.md
tests/vectors/: README.md  metadata-invariance-v1-draft-001.json  rotation-state-machine-v1-draft-001.yaml  v1-draft-001.json
tests/vectors/invalid/: duplicate-public-salt.yaml  two-active-versions.yaml  unknown-scheme.yaml
