[package]
name = "seedpass"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dev-dependencies]
assert_cmd = "2"
tempfile.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
base64.workspace = true
rand.workspace = true
rpassword.workspace = true
seedpass-core = { path = "../seedpass-core" }
seedpass-crypto = { path = "../seedpass-crypto" }
seedpass-derive = { path = "../seedpass-derive" }
seedpass-storage = { path = "../seedpass-storage" }
serde_json.workspace = true
serde_yaml.workspace = true
tar.workspace = true
time.workspace = true
ulid.workspace = true
zeroize.workspace = true
