[package]
name = "seedpass-codec"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
seedpass-core = { path = "../seedpass-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
