[package]
name = "seedpass-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
ulid.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_yaml.workspace = true
