[package]
name = "seedpass-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aes-gcm.workspace = true
argon2.workspace = true
base64.workspace = true
data-encoding.workspace = true
hkdf.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
serde_json.workspace = true
