[package]
name = "seedpass-derive"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
seedpass-codec = { path = "../seedpass-codec" }
seedpass-core = { path = "../seedpass-core" }
seedpass-crypto = { path = "../seedpass-crypto" }
hkdf.workspace = true
hmac.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
proptest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
