[package]
name = "seedpass-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
directories.workspace = true
seedpass-codec = { path = "../seedpass-codec" }
seedpass-core = { path = "../seedpass-core" }
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
